# github-explorer

./: .gitignore  Makefile  README.md  pyproject.toml
github_explorer/: main.py
tests/: test_github_explorer.py
